--- a/homework/09-template-literals/index.html
+++ b/homework/09-template-literals/index.html
@@ -14,8 +14,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Bootstrap Icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
-    <!-- Page content -->
-    <script src="content.js"></script>
+    <!-- Page content & behaviour -->
+    <script src="behaviour.js"></script>
 </head>
 
 <body>
